--- a/prow/config.yaml
+++ b/prow/config.yaml
@@ -49,7 +49,8 @@ presubmits:
     spec:
       containers:
       - image: gcr.io/cxing-gke-dev/cirq-test:latest
-        command: ["check/mypy"]
+        command: ["/bin/sh"]
+        args: ["-c", "/install.sh; check/mypy"]
   - name: pylint
     decorate: true
     always_run: true
@@ -57,7 +58,8 @@ presubmits:
     spec:
       containers:
       - image: gcr.io/cxing-gke-dev/cirq-test:latest
-        command: ["check/pylint"]
+        command: ["/bin/sh"]
+        args: ["-c", "/install.sh; check/pylint"]
   - name: format
     decorate: true
     always_run: true
@@ -65,7 +67,8 @@ presubmits:
     spec:
       containers:
       - image: gcr.io/cxing-gke-dev/cirq-test:latest
-        command: ["check/format-incremental"]
+        command: ["/bin/sh"]
+        args: ["-c", "/install.sh; check/format-incremental"]
   - name: pytest-and-incremental-coverage
     decorate: true
     always_run: true
@@ -73,7 +76,8 @@ presubmits:
     spec:
       containers:
       - image: gcr.io/cxing-gke-dev/cirq-test:latest
-        command: ["check/pytest-and-incremental-coverage", "master"]
+        command: ["/bin/sh"]
+        args: ["-c", "/install.sh; check/pytest-and-incremental-coverage master"]
   - name: pytest-without-contrib
     decorate: true
     always_run: true
@@ -81,7 +85,8 @@ presubmits:
     spec:
       containers:
       - image: gcr.io/cxing-gke-dev/cirq-test:latest
-        command: ["check/pytest", "--ignore=cirq/contrib"]
+        command: ["/bin/sh"]
+        args: ["-c", "/install.sh; check/pytest --ignore=cirq/contrib"]
 
 
 branch-protection:
